# vibe-thinker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  agentdb_migration.py  bitemporal_log.py  clr_result_cache.json  clr_trace.json  demo.py  demo_full_build.py  demo_hard_challenge.py  demo_llm_complex.py  demo_v1.py  demo_verified_swarm.py  docker-compose.yml  federated_queue.py  federation_server.py  format_enforcer.py  hardware_guardrail.py  hybrid_orchestrator.py  math_solver.py  persistent_cache.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-embeddings.txt  requirements-federation.txt  requirements-legacy-full.txt  requirements-models.txt  requirements-sandbox.txt  requirements.txt  retrieval.py  rfsn_cli.py  rfsn_job_queue.py  rfsn_jobs.jsonl  rfsn_jobs_bitemporal.jsonl  (+16 more)
.github/workflows/: core.yml  optional.yml  test.yml
docker/: __init__.py  agentdb.Dockerfile
docker/envoy/: envoy.yaml
docs/: deployment.md  roadmap.md  rust_dependency_report.md
examples/: README.md  demo_code_verification.py  demo_coding_task.py  demo_complex_pipeline.py  demo_constraint_satisfaction.py  demo_math_reasoning.py  demo_turboquant_ppl.py
gate_results/: build_clean_zip.txt  build_proof_bundle.txt  build_release.txt  check_ruvllm.txt  demo_verified_swarm.json  demo_verified_swarm.txt  environment.txt  pytest_release_web_queue.txt  pytest_web_job_queue.txt  summary.json  test_core.txt  test_docker.txt  test_embeddings.txt  test_federation.txt
profiles/: __init__.py  mac-local.env
rust/probes/ruvllm_exo_probe/: Cargo.toml
rust/probes/ruvllm_exo_probe/src/: main.rs
ruvllm_py/: .gitignore  Cargo.toml  README.md  pyproject.toml
ruvllm_py/src/: lib.rs
sandbox/: Dockerfile  README.md  __init__.py  base.py  docker_executor.py  entrypoint.sh  envoy_sidecar.py  local_executor.py  network_allowlist.py  sbx_executor.py  sni_proxy.py  warm_pool_executor.py
scripts/: __init__.py  build_clean_zip.py  check_ruvllm.sh  demo_setup.sh  demo_shadow_vector_store.py  export_dpo.py  gen_ed25519_key.py  mac_setup.sh  mac_smoke.sh  migrate_to_agentdb.py  ppl_corpus.txt  release_gate.sh  release_zip.sh  test_all.sh  test_compose.sh  test_core.sh  test_docker.sh  test_embeddings.sh  test_federation.sh  test_gate_matrix.sh  test_local.sh  test_optional.sh  test_zip_release.sh  train_lora.py  turboquant_ppl_check.py
tests/: conftest.py  test_adaptive_compute.py  test_agentdb_only.py  test_bitemporal_log.py  test_cache.py  test_clr_scoring.py  test_code_verifier.py  test_compose_config.py  test_compute_limits.py  test_deterministic_check.py  test_envoy_sidecar.py  test_export_dpo.py  test_factual_verifier.py  test_federated_queue.py  test_federation_server.py  test_federation_zombie.py  test_format_enforcer.py  test_hardware_guardrail.py  test_job_queue.py  test_math_solver.py  test_math_verifier.py  test_migration.py  test_mutation.py  test_network_allowlist.py  test_network_integration.py  test_nli_encoder.py  test_orchestrator_runtime_spine.py  test_redis_federation.py  test_release_zip_hygiene.py  test_repl.py  test_retrieval.py  test_routing.py  test_runtime_scoring.py  test_ruvllm_adapter.py  test_sandbox_network_enforcement.py  test_schema_verifier.py  test_scoring.py  test_signers.py  test_sni_proxy.py  test_sona_gossip.py  (+17 more)
verifiers/: __init__.py  base.py  code_verifier.py  factual_verifier.py  logic_verifier.py  math_verifier.py  mutation.py  nli_encoder.py  schema_verifier.py
web/: app.py
web/static/: index.html
