[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vibe-thinker"
version = "1.0.0"
description = "Fail-closed hybrid reasoning control plane for local LLMs with CLR, deterministic verifiers, job queue, and bi-temporal audit logging"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2,<3",
    "scikit-learn>=1.3,<2",
    "numpy>=1.24,<2",
]
web = [
    "fastapi>=0.100,<1",
    "uvicorn>=0.23,<1",
]
federation = [
    "redis>=5.0,<6",
]
dev = [
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-timeout>=2.0,<3",
    "ruff>=0.1,<1",
    "mypy>=1.0,<2",
    "httpx>=0.24,<1",
]
nli = [
    "transformers>=4.40,<5",
    "torch>=2.2,<3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"

[tool.setuptools]
py-modules = [
    "vibe_clr",
    "vibe_clr_async",
    "hybrid_orchestrator",
    "persistent_cache",
    "rfsn_job_queue",
    "bitemporal_log",
    "rfsn_cli",
    "scoring",
    "math_solver",
]
packages = ["verifiers", "sandbox"]
