[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-thinker"
version = "0.4.0a0"
description = "Verifier-driven local reasoning engine with adaptive CLR, deterministic verifiers, and bi-temporal audit logging"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.11,<4",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-timeout>=2.0,<3",
    "pytest-cov>=4.0,<6",
    "hypothesis>=6.0,<7",
    "ruff>=0.1,<1",
    "mypy>=1.0,<2",
    "httpx>=0.24,<1",
]
test = [
    "fakeredis>=2.0,<3",
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-timeout>=2.0,<3",
    "hypothesis>=6.0,<7",
]
logic = [
    "z3-solver>=4.12,<5",
]
embeddings = [
    "sentence-transformers>=2.2,<3",
    "scikit-learn>=1.3,<2",
    "numpy>=1.24,<2",
    "faiss-cpu>=1.7,<2",
]
federation = [
    "redis>=5.0,<6",
    "fakeredis>=2.0,<3",
]
web = [
    "fastapi>=0.109.1,<1",
    "uvicorn>=0.23,<1",
    "websockets>=12.0,<14",
    "pydantic>=2.0,<3",
]
sandbox = [
    "docker>=6.0,<8",
]
nli = [
    "transformers>=4.40,<5",
    "torch>=2.2,<3",
]
all = [
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-timeout>=2.0,<3",
    "pytest-cov>=4.0,<6",
    "hypothesis>=6.0,<7",
    "ruff>=0.1,<1",
    "mypy>=1.0,<2",
    "httpx>=0.24,<1",
    "fakeredis>=2.0,<3",
    "z3-solver>=4.12,<5",
    "sentence-transformers>=2.2,<3",
    "scikit-learn>=1.3,<2",
    "numpy>=1.24,<2",
    "faiss-cpu>=1.7,<2",
    "redis>=5.0,<6",
    "fastapi>=0.109.1,<1",
    "uvicorn>=0.23,<1",
    "websockets>=12.0,<14",
    "pydantic>=2.0,<3",
    "docker>=6.0,<8",
    "transformers>=4.40,<5",
    "torch>=2.2,<3",
]

[project.scripts]
vibe-thinker = "rfsn_cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"
markers = [
    "core: tests requiring only core dependencies",
    "logic: tests requiring z3-solver",
    "embeddings: tests requiring sentence-transformers or FAISS",
    "federation: tests requiring Redis/fakeredis",
    "web: tests requiring FastAPI/WebSocket dependencies",
    "sandbox: tests requiring Docker",
    "nli: tests requiring transformers/torch",
    "integration: slower integration tests",
]

[tool.setuptools]
py-modules = [
    "rfsn_cli",
    "hybrid_orchestrator",
    "vibe_clr",
    "vibe_clr_async",
    "persistent_cache",
    "vector_store",
    "retrieval",
    "format_enforcer",
    "scoring",
    "math_solver",
    "rfsn_job_queue",
    "bitemporal_log",
    "signers",
    "serialization",
    "tool_callbacks",
    "web_security",
    "hardware_guardrail",
    "ruvllm_adapter",
    "federated_queue",
    "federation_server",
    "vt_config",
    "vt_logging",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "verifiers*",
    "sandbox*",
    "web*",
]
