[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-thinker"
version = "0.4.6a5"
description = "Verifier-driven local reasoning engine with adaptive CLR, deterministic verifiers, and bi-temporal audit logging"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.11,<4",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-timeout>=2.0,<3",
    "pytest-cov>=4.0,<6",
    "hypothesis>=6.0,<7",
    "ruff>=0.1,<1",
    "mypy>=1.0,<2",
    "build>=1.0,<2",
]
test = [
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-timeout>=2.0,<3",
    "hypothesis>=6.0,<7",
    # Lightweight runtime deps required by the fast core gate tests.
    "numpy>=1.24,<2",
    "scikit-learn>=1.3,<2",
    "cryptography>=43.0.1,<46",
    "z3-solver>=4.12,<5",
    "pyyaml>=6.0,<7",
]
logic = [
    "z3-solver>=4.12,<5",
]
embeddings = [
    "sentence-transformers>=2.2,<3",
    "scikit-learn>=1.3,<2",
    "numpy>=1.24,<2",
    "faiss-cpu>=1.7,<2",
]
federation = [
    "redis>=5.0,<6",
    "fakeredis>=2.0,<3",
    "cryptography>=43.0.1,<46",
]
web = [
    "fastapi>=0.109.1,<1",
    "uvicorn>=0.23,<1",
    "websockets>=12.0,<14",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
]
sandbox = [
    "docker>=6.0,<8",
    "wasmtime>=10.0,<20",
    "cryptography>=43.0.1,<46",
]
models = [
    "llama-cpp-python>=0.2.70,<1",
    "onnxruntime>=1.17,<2",
    "huggingface_hub>=0.20,<1",
    "tokenizers>=0.15,<1",
    "duckduckgo_search>=4.0,<5",
    "wikipedia>=1.4,<2",
]
nli = [
    "transformers>=4.40,<5",
    "torch>=2.2,<3",
]
rust = [
    "maturin>=1.4,<2",
]
all = [
    "pytest>=7.0,<9",
    "pytest-asyncio>=0.21,<1",
    "pytest-timeout>=2.0,<3",
    "pytest-cov>=4.0,<6",
    "hypothesis>=6.0,<7",
    "ruff>=0.1,<1",
    "mypy>=1.0,<2",
    "build>=1.0,<2",
    "z3-solver>=4.12,<5",
    "sentence-transformers>=2.2,<3",
    "scikit-learn>=1.3,<2",
    "numpy>=1.24,<2",
    "faiss-cpu>=1.7,<2",
    "redis>=5.0,<6",
    "fakeredis>=2.0,<3",
    "fastapi>=0.109.1,<1",
    "uvicorn>=0.23,<1",
    "websockets>=12.0,<14",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "docker>=6.0,<8",
    "wasmtime>=10.0,<20",
    "cryptography>=43.0.1,<46",
    "transformers>=4.40,<5",
    "torch>=2.2,<3",
    "maturin>=1.4,<2",
    "llama-cpp-python>=0.2.70,<1",
    "onnxruntime>=1.17,<2",
    "huggingface_hub>=0.20,<1",
    "tokenizers>=0.15,<1",
    "duckduckgo_search>=4.0,<5",
    "wikipedia>=1.4,<2",
]

[project.scripts]
vibe-thinker = "rfsn_cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"
markers = [
    "core: tests requiring only core dependencies",
    "logic: tests requiring z3-solver",
    "embeddings: tests requiring sentence-transformers or FAISS",
    "federation: tests requiring Redis/fakeredis",
    "web: tests requiring FastAPI/WebSocket dependencies",
    "sandbox: tests requiring Docker",
    "nli: tests requiring transformers/torch",
    "integration: slower integration tests",
    "requires_docker_gateway: tests requiring a real enforced-gateway Docker fixture",
    "timeout: per-test timeout marker (enforced when pytest-timeout is installed)",
]
filterwarnings = [
    # Upstream Starlette deprecation: fastapi's testclient re-exports
    # starlette.testclient which warns about httpx. Not our code; suppress
    # until fastapi/starlette ships the httpx2 migration. The warning class
    # is StarletteDeprecationWarning (not stdlib DeprecationWarning), so we
    # match on message text only (no category filter = matches any class).
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.setuptools]
py-modules = [
    "rfsn_cli",
    "hybrid_orchestrator",
    "vibe_clr",
    "vibe_clr_async",
    "persistent_cache",
    "vector_store",
    "retrieval",
    "format_enforcer",
    "scoring",
    "math_solver",
    "rfsn_job_queue",
    "bitemporal_log",
    "signers",
    "serialization",
    "tool_callbacks",
    "web_security",
    "hardware_guardrail",
    "ruvllm_adapter",
    "federated_queue",
    "federation_server",
    "vt_config",
    "vt_logging",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "verifiers*",
    "sandbox*",
    "web*",
]

[tool.ruff]
# Green lint baseline. Focused on real-bug rules (B = flake8-bugbear,
# C4 = comprehensions, W = pycodestyle warnings e.g. invalid escape
# sequences). F/E/SIM/RET/UP are NOT enabled here because the existing
# codebase has hundreds of stylistic findings under them; enabling them
# would make `ruff check .` red without catching the dead-code class of
# bug that mattered (a bare string literal after `return` is NOT flagged
# by any ruff rule). That class is covered instead by the AST gate in
# tests/test_static_unreachable_code.py.
extend-exclude = [
    "rust",        # vendored third-party (onig_sys, exo probe)
    "build",       # generated wheel/sdist artifacts
    ".venv",
    ".venv-core",
]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C4", "W"]
# B905 (zip() without explicit strict=) is pedantic for existing correct
# code where mismatched lengths are intentional/irrelevant; enabling it
# would churn many zip call sites without catching a real bug. The other
# B rules (B904 raise-from, B023 closure binding, B011 assert False,
# B007 unused loop var) remain active.
ignore = ["B905"]
