[package]
name = "ruvllm_py"
version = "0.2.0"
edition = "2021"
description = "Python bindings for the RuvLLM Rust inference engine with TurboQuant KV cache compression"
license = "MIT"
repository = "https://github.com/ruvnet/ruvllm"

[lib]
name = "ruvllm_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
chrono = "0.4"

# RuvLLM inference backend (v1.2): the ruvllm 2.3 crate is published on
# crates.io. The real inference path (CandleBackend + candle-core) is
# gated behind the "candle" feature so this crate compiles as a stub
# without it. Enable with:
#   cargo build --release --features candle        (CPU)
#   cargo build --release --features inference-metal   (Apple Silicon)
ruvllm = { version = "2.3", default-features = false, features = ["async-runtime"] }

# Security patches (v3.0): explicitly pin transitive deps that ruvllm
# may pull in when the candle feature is enabled. These are no-ops
# unless the vulnerable versions are actually resolved in the dep tree,
# but they ensure deterministic, safe builds even in isolated CI/CD
# environments that don't have access to the probe configs.
#
# - rustls-webpki 0.101.x: 3 CVEs (CRL panic, cert name constraint
#   bypass). The fix is in 0.101.8+ (same 0.101 minor).
# - lru 0.12.5: unsound (Stacked Borrows violation in IterMut).
#   The fix is in 0.13.0 (API-breaking, hence new minor).
#
# [patch.crates-io] requires exact version specs that exist in the
# registry. If a future dependency pulls in lru 0.12.x, add a direct
# dependency on lru = "0.13" to force resolution to the safe version.
# Similarly for rustls-webpki, add rustls-webpki = "0.101.8" as a
# direct dep to force the patched version.
[patch.crates-io]
# No patches currently needed — the dep tree was verified clean of
# both rustls-webpki and lru (v2.0 Phase 1, v3.0 re-verification).
# If a future ruvllm version pulls these in, add direct deps above.

[features]
default = []
# Real inference via candle-core (CPU). Enables CandleBackend::load_gguf
# + generate(). Without this, Engine.complete() returns a stub response.
candle = ["ruvllm/candle"]
# Apple Silicon Metal acceleration (implies candle).
inference-metal = ["candle", "ruvllm/inference-metal"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
