[package]
name = "ruvllm_py"
version = "0.2.0"
edition = "2021"
description = "Python bindings for the RuvLLM Rust inference engine with TurboQuant KV cache compression"
license = "MIT"
repository = "https://github.com/ruvnet/ruvllm"

[lib]
name = "ruvllm_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
chrono = "0.4"

# RuvLLM inference backend (v1.2): the ruvllm 2.3 crate is published on
# crates.io. The real inference path (CandleBackend + candle-core) is
# gated behind the "candle" feature so this crate compiles as a stub
# without it. Enable with:
#   cargo build --release --features candle        (CPU)
#   cargo build --release --features inference-metal   (Apple Silicon)
ruvllm = { version = "2.3", default-features = false, features = ["async-runtime"] }

# Security patches (v3.1): force-patch transitive deps that ruvllm 2.3
# may pull in when the candle feature is enabled. Adding these as direct
# dependencies forces the cargo resolver to pick at least these versions
# for any transitive dep that requests them (cargo unifies versions).
# Do NOT wait for upstream to update — pin the safe versions here.
#
# - rustls-webpki 0.103.13+: fixes 3 CVEs in older 0.101.x (CRL panic,
#   cert name constraint bypass). The 0.103 series is the current
#   rustls-webpki line.
# - lru 0.13.1+: fixes the unsound Stacked Borrows violation in
#   IterMut present in 0.12.5. The 0.13 series is API-breaking (hence
#   the new minor).
#
# These are gated behind the "candle" feature (the only feature that
# pulls in the vulnerable transitive deps) so they don't bloat the stub
# build. If a future ruvllm version pulls these in without candle, add
# them to the base [dependencies] section too.
rustls-webpki = { version = "0.103", optional = true }
lru = { version = "0.13", optional = true }

[features]
default = []
# Real inference via candle-core (CPU). Enables CandleBackend::load_gguf
# + generate(). Without this, Engine.complete() returns a stub response.
# Also activates the security-pinned transitive deps (rustls-webpki,
# lru) so the resolver picks the safe versions when candle pulls them in.
candle = ["ruvllm/candle", "dep:rustls-webpki", "dep:lru"]
# Apple Silicon Metal acceleration (implies candle).
inference-metal = ["candle", "ruvllm/inference-metal"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
